LAB-4/text.txt
stud@DeveloperVM:~/ngk/restinio/dev/sample$ make SAMPLE=express_router
cd express_router && make -f ../Makefile.sample 
make[1]: Entering directory '/home/stud/ngk/restinio/dev/sample/express_router'
Compiling for 'x86_64' in 'release' mode...
Generating dependency for main.cpp
Compiling main.cpp
main.cpp: In member function ‘auto weatherInformationHandler::on_weather_post(const restinio::request_handle_t&, restinio::router::route_params_t)’:
main.cpp:73:86: error: no matching function for call to ‘restinio::websocket::basic::message_t::message_t(<brace-enclosed initializer list>)’
   73 |                 ws->send_message(rws::message_t{ rws::opcode_t::text_frame, json_msg });
      |                                                                                      ^
In file included from ../../restinio/websocket/websocket.hpp:13,
                 from main.cpp:3:
../../restinio/websocket/message.hpp:157:17: note: candidate: ‘restinio::websocket::basic::message_t::message_t(restinio::websocket::basic::final_frame_flag_t, restinio::websocket::basic::opcode_t, std::string)’
  157 |                 message_t(
      |                 ^~~~~~~~~
../../restinio/websocket/message.hpp:157:17: note:   candidate expects 3 arguments, 2 provided
../../restinio/websocket/message.hpp:150:17: note: candidate: ‘restinio::websocket::basic::message_t::message_t(restinio::websocket::basic::final_frame_flag_t, restinio::websocket::basic::opcode_t)’
  150 |                 message_t(
      |                 ^~~~~~~~~
../../restinio/websocket/message.hpp:151:44: note:   no known conversion for argument 1 from ‘restinio::websocket::basic::opcode_t’ to ‘restinio::websocket::basic::final_frame_flag_t’
  151 |                         final_frame_flag_t final_flag,
      |                         ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
../../restinio/websocket/message.hpp:148:17: note: candidate: ‘restinio::websocket::basic::message_t::message_t()’
  148 |                 message_t() = default;
      |                 ^~~~~~~~~
../../restinio/websocket/message.hpp:148:17: note:   candidate expects 0 arguments, 2 provided
../../restinio/websocket/message.hpp:143:7: note: candidate: ‘restinio::websocket::basic::message_t::message_t(const restinio::websocket::basic::message_t&)’
  143 | class message_t final
      |       ^~~~~~~~~
../../restinio/websocket/message.hpp:143:7: note:   candidate expects 1 argument, 2 provided
../../restinio/websocket/message.hpp:143:7: note: candidate: ‘restinio::websocket::basic::message_t::message_t(restinio::websocket::basic::message_t&&)’
../../restinio/websocket/message.hpp:143:7: note:   candidate expects 1 argument, 2 provided
make[1]: *** [../Makefile.sample:66: build/x86_64/release/main.o] Error 1
make[1]: Leaving directory '/home/stud/ngk/restinio/dev/sample/express_router'
make: *** [Makefile:8: all] Error 2
stud@DeveloperVM:~/ngk/restinio/dev/sample$ 
